font is :smile:

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<link href="wwwroot/css/fix.css" rel="stylesheet">
+<link href="~/css/fix.css" rel="stylesheet">
 
 <div class="text-center">
     <h1 class="display-4">Clinica Médica</h1>
@@ -11,14 +11,19 @@
 
 <div class="row">
 
-    <div class="col-2">
+    <div class="col-4">
         <h5>
             Citas de hoy  
         </h5>    
+        <p>
+            <ul>
+                <li>Fecha: 12/12/2019</li>
+            <ul>
+        <p>
 
     </div>
     
-    <div class="citas col-10">
+    <div class="citas col-8">
         <h5>Acceso Directos</h5>
     </div>
 </div>
