calendar home :art:

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -46,6 +46,9 @@
                         </li>
                     </ul>
                 </div>
+                <a href="#">
+                    <i>Cerrar Session</i>   
+                </a>
             </div>
         </nav>
     </header>
