grid fix :wrench:

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,34 +7,59 @@
 
 <div class="text-center">
     <div id="title">
-    <h1 class="display-4">Clinica Médica</h1>
+    <h1 class="display-4">Citas Pendientes</h1>
     </div>
 </div>
 
-<div class="row">
+<div class="container">
 
-    <div class="centro-dos col-3">
+    <div class="jaja row">
+    <div class="centro-dos col-md-4">
+          <table class="table table-responsive table-hover table-striped">
+            <thead class="thead-light memes">
+              <tr>
+                <th scope="">Fecha</th>
+                <th scope="">Hora</th>
+              </tr>
+            </thead>
+            <tbody class="memes">
+              <tr>
+                <td >12/21/2019</th>
+                <td>12:25 PM</td>
+              </tr>
+              <tr>
+                <td >12/21/2019</th>
+                <td>12:25 PM</td>
+              </tr>
+              <tr>
+                <td >12/21/2019</th>
+                <td>1:25 PM</td>
+              </tr>
+              <tr>
+                <td >12/21/2019</th>
+                <td>1:25 PM</td>
+              </tr>
+              <tr>
+                <td >12/21/2019</th>
+                <td>1:25 PM</td>
+              </tr>
+              <tr>
+                <td >12/21/2019</th>
+                <td>1:25 PM</td>
+              </tr>
+            </tbody>
+          </table>
+    </div> 
+  
+       <!--  
         <a href="#" class="gg">
             <h4>
             Citas de este Mes
             </h4>
         </a>    
-        <p>
-            <ul class="" id="lista">
-                <li class="fecha gg"><a href="#">Fecha: 12/12/2019</a></li>
-                <li class="fecha gg"><a href="#">Fecha: 12/12/2019</a></li>
-                <li class="fecha gg"><a href="#">Fecha: 12/12/2019</a></li>
-                <li class="fecha gg"><a href="#">Fecha: 12/12/2019</a></li>
-                <li class="fecha gg"><a href="#">Fecha: 12/12/2019</a></li>
-                <li class="fecha gg"><a href="#">Fecha: 12/12/2019</a></li>
-                <li class="fecha gg"><a href="#">Fecha: 12/12/2019</a></li>
-                <li class="fecha gg"><a href="#">Fecha: 12/12/2019</a></li>
-            <ul>
-        <p>
+        -->
 
-    </div>
-    
-    <div class="citas col">
+    <div class="citas col-md-8 ">
         <table>
               <tr>
                 <th class="day-name">Dom</th>
