--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
                         </li>
                     </ul>
                 </div>
-                <a href="#">
+                <a class="d-none d-sm-block" href="#">
                     <i>Cerrar Session</i>   
                 </a>
             </div>
