--- a/Views/AdminLogin/Index.cshtml
+++ b/Views/AdminLogin/Index.cshtml
@@ -1,7 +1,8 @@
 @model IEnumerable<Clinica.Models.AdminLogin>
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Admin Login";
+
 }
 
 <!DOCTYPE html>
