--- a/Views/Cita/Edit.cshtml
+++ b/Views/Cita/Edit.cshtml
@@ -1,9 +1,10 @@
 @model Clinica.Models.Cita
 
-@{
-    Layout = null;
-}
 
+@{
+    ViewData["Title"] = "Cita index";
+
+}
 <!DOCTYPE html>
 
 <html>
