--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -36,14 +36,22 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="paciente" asp-action="index">Pacientes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Consultas</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Cita" asp-action="index">Agenda</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Agenda</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="consulta" asp-action="index">Consultas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Caja</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Factura" asp-action="index">Caja</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="index">Mantenimientos</a>
+                        </li>
+                        <!--
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Reportes</a>
+                        </li>
+                        -->
                     </ul>
                 </div>
                 <a class="d-none d-sm-block" href="#">
