--- a/Views/Paciente/Create.cshtml
+++ b/Views/Paciente/Create.cshtml
@@ -21,62 +21,81 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="PrimerNombre" class="control-label"></label>
+                <label asp-for="PrimerNombre" class="control-label">Primer Nombre</label>
                 <input asp-for="PrimerNombre" class="form-control" />
                 <span asp-validation-for="PrimerNombre" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SegundoNombre" class="control-label"></label>
+                <label asp-for="SegundoNombre" class="control-label">Segundo Nombre</label>
                 <input asp-for="SegundoNombre" class="form-control" />
                 <span asp-validation-for="SegundoNombre" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PrimerApellido" class="control-label"></label>
+                <label asp-for="PrimerApellido" class="control-label">Primer Apellido</label>
                 <input asp-for="PrimerApellido" class="form-control" />
                 <span asp-validation-for="PrimerApellido" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SegundoApellido" class="control-label"></label>
+                <label asp-for="SegundoApellido" class="control-label">Segundo Apellido</label>
                 <input asp-for="SegundoApellido" class="form-control" />
                 <span asp-validation-for="SegundoApellido" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ApellidoCasada" class="control-label"></label>
+                <label asp-for="ApellidoCasada" class="control-label">Apellido de Casáda </label>
                 <input asp-for="ApellidoCasada" class="form-control" />
                 <span asp-validation-for="ApellidoCasada" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Genero" class="control-label"></label>
+                <label asp-for="Genero" class="control-label">Género</label>
+                <!--
                 <input asp-for="Genero" class="form-control" />
                 <span asp-validation-for="Genero" class="text-danger"></span>
+                -->
+                <select asp-for="Genero" class="form-control">
+                    <option value="M">M</option>
+                    <option value="F">F</option>
+                </select>
             </div>
             <div class="form-group">
-                <label asp-for="FechaNacimiento" class="control-label"></label>
+                <label asp-for="FechaNacimiento" class="control-label">Fecha de Nacimiento</label>
                 <input asp-for="FechaNacimiento" class="form-control" />
                 <span asp-validation-for="FechaNacimiento" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="NoId" class="control-label"></label>
+                <label asp-for="NoId" class="control-label">CUI/DPI</label>
                 <input asp-for="NoId" class="form-control" />
                 <span asp-validation-for="NoId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TipoEncargado" class="control-label"></label>
+                <label asp-for="TipoEncargado" class="control-label">Tipo de Encargado</label>
+                <!--
                 <input asp-for="TipoEncargado" class="form-control" />
                 <span asp-validation-for="TipoEncargado" class="text-danger"></span>
+                -->
+                <select asp-for="TipoEncargado" class="form-control">
+                    <option value="Padre">Padre</option>
+                    <option value="Madre">Madre</option>
+                    <option value="Conyuge">Conyuge</option>
+                    <option value="Hijo(a)">Hijo(a)</option>
+                    <option value="Hermano(a)">Hijo(a)</option>
+                    <option value="Tio(a)">Tio(a)</option>
+                    <option value="Primo(a)">Primo(a)</option>
+                    <option value="Abuelo(a)">Abuelo(a)</option>
+                    <option value="Otros(a)">Otros(a)</option>
+                </select>
             </div>
             <div class="form-group">
-                <label asp-for="NombreEncargado" class="control-label"></label>
+                <label asp-for="NombreEncargado" class="control-label">Nombre Encargado</label>
                 <input asp-for="NombreEncargado" class="form-control" />
                 <span asp-validation-for="NombreEncargado" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="NumeroTel" class="control-label"></label>
+                <label asp-for="NumeroTel" class="control-label">Teléfono</label>
                 <input asp-for="NumeroTel" class="form-control" />
                 <span asp-validation-for="NumeroTel" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="IdAdmin" class="control-label"></label>
+                <label asp-for="IdAdmin" class="control-label">ID Admin</label>
                 <select asp-for="IdAdmin" class ="form-control" asp-items="ViewBag.IdAdmin"></select>
             </div>
             <div class="form-group">
