--- a/Views/Paciente/Index.cshtml
+++ b/Views/Paciente/Index.cshtml
@@ -13,11 +13,12 @@
 </head>
 <body>
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="btn btn-primary" asp-action="Create">Create New</a>
 </p>
-<table class="table">
+<table class="table table-sm">
     <thead>
         <tr>
+        <!-- nombre
             <th>
                 @Html.DisplayNameFor(model => model.PrimerNombre)
             </th>
@@ -33,6 +34,10 @@
             <th>
                 @Html.DisplayNameFor(model => model.ApellidoCasada)
             </th>
+        -->
+            <th>
+                Nombre Completo
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.Genero)
             </th>
@@ -42,18 +47,18 @@
             <th>
                 @Html.DisplayNameFor(model => model.NoId)
             </th>
+           <!-- 
             <th>
                 @Html.DisplayNameFor(model => model.TipoEncargado)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.NombreEncargado)
             </th>
+            -->
             <th>
                 @Html.DisplayNameFor(model => model.NumeroTel)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IdAdminNavigation)
-            </th>
+            
             <th></th>
         </tr>
     </thead>
@@ -61,18 +66,10 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.PrimerNombre)
-            </td>
-            <td>
+                @Html.DisplayFor(modelItem => item.PrimerNombre) 
                 @Html.DisplayFor(modelItem => item.SegundoNombre)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.PrimerApellido)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.SegundoApellido)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.ApellidoCasada)
             </td>
             <td>
@@ -84,22 +81,22 @@
             <td>
                 @Html.DisplayFor(modelItem => item.NoId)
             </td>
+            <!-- 
             <td>
                 @Html.DisplayFor(modelItem => item.TipoEncargado)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.NombreEncargado)
             </td>
+            -->
             <td>
                 @Html.DisplayFor(modelItem => item.NumeroTel)
             </td>
+            
             <td>
-                @Html.DisplayFor(modelItem => item.IdAdminNavigation.IdAdmin)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.IdPaciente">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.IdPaciente">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.IdPaciente">Delete</a>
+                <a class="btn btn-success" asp-action="Edit" asp-route-id="@item.IdPaciente">Edit</a>
+                <a class="btn btn-warning" asp-action="Details" asp-route-id="@item.IdPaciente">Details</a>
+                <a  class="btn btn-danger" asp-action="Delete" asp-route-id="@item.IdPaciente">Delete</a>
             </td>
         </tr>
 }
