--- a/Views/Paciente/Details.cshtml
+++ b/Views/Paciente/Details.cshtml
@@ -93,8 +93,8 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.IdPaciente">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.IdPaciente" class="btn btn-primary">Edit</a> 
+    <a class="btn btn-secondary" asp-action="Index">Back to List</a>
 </div>
 </body>
 </html>
