--- a/Views/Cita/Index.cshtml
+++ b/Views/Cita/Index.cshtml
@@ -14,7 +14,7 @@
 </head>
 <body>
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="btn btn-primary" asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -23,10 +23,10 @@
                 @Html.DisplayNameFor(model => model.Estado)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.FechaInicio)
+                Fecha de Inicio
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.FechaFinal)
+                Fecha de Finalización
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.IdPacienteNavigation)
@@ -38,7 +38,18 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Estado)
+            @{
+                switch(item.Estado){
+                    case "1": <text>Pendiente</text>; break;
+                    case "2": <text>No Confirmada</text>; break;
+                    case "3": <text>Confirmada</text>; break;
+                    case "4": <text>En sala de Espera</text>; break;
+                    case "5": <text>En Consulta</text>; break;
+                    case "6": <text>Atendida</text>; break;
+                    case "7": <text>Cancelada</text>; break;
+                    default: break;
+                }
+            }
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FechaInicio)
@@ -50,9 +61,9 @@
                 @Html.DisplayFor(modelItem => item.IdPacienteNavigation.IdPaciente)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.IdCita">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.IdCita">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.IdCita">Delete</a>
+                <a  class="btn btn-success" asp-action="Edit" asp-route-id="@item.IdCita">Edit</a>
+                <a   class="btn btn-warning" asp-action="Details" asp-route-id="@item.IdCita">Details</a>
+                <a  class="btn btn-danger" asp-action="Delete" asp-route-id="@item.IdCita">Delete</a>
             </td>
         </tr>
 }
