--- a/Views/Cita/Details.cshtml
+++ b/Views/Cita/Details.cshtml
@@ -44,8 +44,8 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.IdCita">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model.IdCita">Edit</a>
+    <a  class="btn btn-secondary" asp-action="Index">Back to List</a>
 </div>
 </body>
 </html>
