--- a/Views/consulta/Create.cshtml
+++ b/Views/consulta/Create.cshtml
@@ -19,34 +19,60 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+            <div id="encabezado">
+            <h5 class="h5">Detalles de la Consulta</h5>
             <div class="form-group">
-                <label asp-for="IdDoctor" class="control-label"></label>
+                <label asp-for="IdDoctor" class="control-label">Doctor</label>
                 <select asp-for="IdDoctor" class ="form-control" asp-items="ViewBag.IdDoctor"></select>
             </div>
+
             <div class="form-group">
-                <label asp-for="Asunto" class="control-label"></label>
-                <input asp-for="Asunto" class="form-control" />
-                <span asp-validation-for="Asunto" class="text-danger"></span>
+                <label asp-for="IdExpediente" class="control-label">Paciente</label>
+                <select asp-for="IdExpediente" class ="form-control" asp-items="ViewBag.IdExpediente"></select>
             </div>
-            <div class="form-group">
-                <label asp-for="MontoCaja" class="control-label"></label>
-                <input asp-for="MontoCaja" class="form-control" />
-                <span asp-validation-for="MontoCaja" class="text-danger"></span>
-            </div>
+
             <div class="form-group">
                 <label asp-for="Fecha" class="control-label"></label>
                 <input asp-for="Fecha" class="form-control" />
                 <span asp-validation-for="Fecha" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <label asp-for="Asunto" class="control-label"></label>
+                <input asp-for="Asunto" class="form-control" />
+                <span asp-validation-for="Asunto" class="text-danger"></span>
+            </div>
+            
+           <!-- 
             <div class="form-group">
                 <label asp-for="TipoConsulta" class="control-label"></label>
                 <input asp-for="TipoConsulta" class="form-control" />
                 <span asp-validation-for="TipoConsulta" class="text-danger"></span>
             </div>
+            -->
+
             <div class="form-group">
-                <label asp-for="IdExpediente" class="control-label"></label>
-                <select asp-for="IdExpediente" class ="form-control" asp-items="ViewBag.IdExpediente"></select>
+                <label asp-for="TipoConsulta" class="control-label">Tipo de Consulta</label>
+                <!--
+                <input asp-for="Genero" class="form-control" />
+                <span asp-validation-for="Genero" class="text-danger"></span>
+                -->
+                <select asp-for="TipoConsulta" class="form-control">
+                    <option value="En Clinica">En Clinica</option>
+                    <option value="Por Telefono">Por Teléfono</option>
+                    <option value="En Hospital">En Hospital</option>
+                    <option value="A domicilio">A Domicilio</option>
+                </select>
             </div>
+            
+            </div>
+            <!-- div de polisa -->
+
+
+            <div id="cobro">
+            
+            <h5 class="h5">Detalles del Seguro</h5>
             <div class="form-group">
                 <label asp-for="SeguroMedico" class="control-label"></label>
                 <input asp-for="SeguroMedico" class="form-control" />
@@ -68,6 +94,13 @@
                 <span asp-validation-for="Relacion" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="MontoCaja" class="control-label"></label>
+                <input asp-for="MontoCaja" class="form-control" />
+                <span asp-validation-for="MontoCaja" class="text-danger"></span>
+            </div>
+            <!-- end div cobro -->
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
@@ -75,7 +108,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-secondary" asp-action="Index">Back to List</a>
 </div>
 
 </body>
