--- a/Views/consulta/Index.cshtml
+++ b/Views/consulta/Index.cshtml
@@ -13,7 +13,7 @@
 </head>
 <body>
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="btn btn-primary" asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -52,7 +52,7 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+    @foreach (var item in Model) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Asunto)
@@ -85,9 +85,9 @@
                 @Html.DisplayFor(modelItem => item.IdExpedienteNavigation.IdExpediente)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.IdConsulta">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.IdConsulta">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.IdConsulta">Delete</a>
+                <a class="btn btn-success" asp-action="Edit" asp-route-id="@item.IdConsulta">Edit</a> |
+                <a class="btn btn-warning" asp-action="Details" asp-route-id="@item.IdConsulta">Details</a> |
+                <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.IdConsulta">Delete</a>
             </td>
         </tr>
 }
