Consulta Fron-End :smile:

--- a/Views/Cita/Index.cshtml
+++ b/Views/Cita/Index.cshtml
@@ -16,8 +16,8 @@
 <p>
     <a class="btn btn-primary" asp-action="Create">Create New</a>
 </p>
-<table class="table">
-    <thead>
+<table class="table table-sm  table-bordered table-responsive">
+    <thead class="thead-dark">
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Estado)
