--- a/Views/Paciente/Index.cshtml
+++ b/Views/Paciente/Index.cshtml
@@ -15,8 +15,8 @@
 <p>
     <a class="btn btn-primary" asp-action="Create">Create New</a>
 </p>
-<table class="table table-sm">
-    <thead>
+<table class="table table-bordered table-responsive table-sm">
+    <thead class="thead-dark">
         <tr>
         <!-- nombre
             <th>
