--- a/Views/consulta/Create.cshtml
+++ b/Views/consulta/Create.cshtml
@@ -82,11 +82,21 @@
             <div id="cobro">
 
                  <h5 class="h5">Detalles del Seguro</h5>
+                 <!--
                  <div class="form-group">
                      <label asp-for="SeguroMedico" class="control-label"></label>
                      <input asp-for="SeguroMedico" class="form-control" />
                      <span asp-validation-for="SeguroMedico" class="text-danger"></span>
                  </div>
+                 -->
+                <div class="form-group">
+                    <label asp-for="SeguroMedico" class="control-label">Seguro Medico</label>
+                    <select asp-for="SeguroMedico" class="form-control">
+                        <option value="1">Si</option>
+                        <option value="0">No</option>
+                    </select>
+                </div>
+
                  <div class="form-group">
                      <label asp-for="NombreCompania" class="control-label"></label>
                      <input asp-for="NombreCompania" class="form-control" />
@@ -97,12 +107,24 @@
                      <input asp-for="PolizaSeguro" class="form-control" />
                      <span asp-validation-for="PolizaSeguro" class="text-danger"></span>
                  </div>
+                 <!--
                  <div class="form-group">
                      <label asp-for="Relacion" class="control-label"></label>
                      <input asp-for="Relacion" class="form-control" />
                      <span asp-validation-for="Relacion" class="text-danger"></span>
                  </div>
-                 <div class="form-group">
+                 -->
+                <div class="form-group">
+                    <label asp-for="Relacion" class="control-label">Relación</label>
+                    <select asp-for="Relacion" class="form-control">
+                        <option value="Principal">Asegurado Principal</option>
+                        <option value="Conyuge">Cónyuge</option>
+                        <option value="Hijo(a)">Hijo(a)</option>
+                        <option value="Empleado">Empleado</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
                      <label asp-for="MontoCaja" class="control-label"></label>
                      <input asp-for="MontoCaja" class="form-control" />
                      <span asp-validation-for="MontoCaja" class="text-danger"></span>
